Creating new Background, new Font Color and Backend logic

--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -1,12 +1,13 @@
 :root {
   --button-color: rgb(237, 240, 105);
+  --font-color: rgb(43, 129, 146);
 }
 
 * {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  color: aliceblue;
+  color: var(--font-color);
 }
 
 .container {
@@ -49,7 +50,7 @@
     90deg,
     rgba(2, 0, 36, 1) 0%,
     rgba(9, 9, 121, 1) 35%,
-    rgba(0, 212, 255, 1) 100%
+    rgb(35, 143, 165) 100%
   );
   width: 50%;
   height: 120vh;
@@ -120,7 +121,7 @@
   }
 
   .link {
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid var(--font-color);
     padding: 2px;
   }
 }
@@ -132,7 +133,7 @@
     90deg,
     rgba(2, 0, 36, 1) 0%,
     rgba(9, 9, 121, 1) 35%,
-    rgba(0, 212, 255, 1) 100%
+    rgb(35, 143, 165) 100%
   );
   width: 50%;
   height: 120vh;
@@ -203,7 +204,7 @@
   }
 
   .link {
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid var(--font-color);
     padding: 2px;
   }
 }
